--- a/truck-monitor/src/main/resources/application.properties
+++ b/truck-monitor/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:h2:mem:truckmonitordb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=truckmonitor
+spring.datasource.password=truckmonitor
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
