--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ buildNumber.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,java-web,code,intellij+iml
 truck-monitor-ui/node_modules/
+.idea/vcs.xml
