--- a/truck-monitor/src/main/resources/application.properties
+++ b/truck-monitor/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.datasource.url=jdbc:postgresql://${DB_SERVER}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
